--- a/Galaxy.html
+++ b/Galaxy.html
@@ -192,6 +192,32 @@
 
     <!-- Work Content -->
 
+    <section data-midnight="white" class="white-bg">
+      <div class="container project-detail">
+        <div class="row lightbox-gallery">
+          <!-- project-detail Two Columns | Start -->
+          <div class="col-lg-8">
+            <h2 class="title bottom_30">A New Management System</h2>
+            <p>
+              In 2018 I worked as a contractor for the DOJ, during my time there I helped research and design a new
+              request management system. For security reasons, and in order to share the work I did, I have re-imagined
+              the problems presented in that project. So, it is fair to say that the solutions and problems presented
+              below come from the real world.
+            </p>
+          </div>
+          <div class="col-lg-4">
+            <h2 class="title bottom_30">Credits</h2>
+            <p>
+              Client: U.S. Department of Justice, <br />Interaction Designer: Peter
+              Verastegui
+            </p>
+          </div>
+        </div>
+      </div>
+      <!-- project-detail Two Columns | End -->
+    </section>
+
+
     <div data-midnight="dark" class="container project-detail galaxy-bg-purple padtop_60">
       <div class="row lightbox-gallery justify-content-center">
 
