--- a/Galaxy.html
+++ b/Galaxy.html
@@ -223,12 +223,10 @@
 
         <div class="col-lg-9">
           <h2 class="title text-center white-text bottom_30">Why Agent J got the small gun?</h2>
-          <p class="white-text bottom_60">Short answer, bad user experience. Thinking as a UX person I
-            thought Agent J was not only a rookie being played. He was also at the mercy of a bad onboarding
-            process. You
-            see he walked in that room without having filed a proper request!. So of course he was not aware
-            of what was
-            in store for him. Lack of awareness, a very familiar problem in our galaxy.
+          <p class="white-text bottom_60">Short answer, bad user experience. Agent J was not only a rookie being played.
+            He was also at the mercy of a bad onboarding
+            process. You see he walked in that room without having filed a proper request!. So of course he was not
+            aware of what was in store for him. Lack of awareness, a very familiar problem in our galaxy.
           </p>
         </div>
 
