--- a/Galaxy.html
+++ b/Galaxy.html
@@ -235,7 +235,7 @@
             alt="Will-Smith">
         </div>
         <div class="container project-detail top_30 bottom_60 col-lg-8 offset-lg-2">
-          <h2 class="title white-text text-center">How would one fix the MIB’s user experience?</h2>
+          <h2 class="title white-text text-center">Creating a RMS for MIB</h2>
         </div>
       </div>
     </div>
@@ -277,7 +277,7 @@
             <div class="image">
               <img src="img/works/Galaxy/Users/Noisy-Cricket.svg" alt="Assignee Agent J">
             </div>
-            <h2 class="subtitle white-text bottom_30">Agent J</h2>
+            <h2 class="subtitle white-text bottom_30">Assignee</h2>
             <p class="grey-text">In the field things can get tragic pretty quickly. Some people
               above me
               would pay to
