--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 
 
           <h3 class="white-text bottom_15">FINRA</h3>
-          <p class="padbot_30 grey-text">Sr. Interaction Designer,<br> Feb 2019 – Present,<br> Rockville, MD</p>
+          <p class="padbot_30 grey-text">Sr. UX Designer,<br> Feb 2019 – Present,<br> Rockville, MD</p>
 
 
         </div>
@@ -303,7 +303,7 @@
 
 
           <h3 class="white-text bottom_15">Subject Matter</h3>
-          <p class="padbot_30 grey-text">Interaction Designer,<br> Jan 2018 – Feb 2019,<br> Washington, DC</p>
+          <p class="padbot_30 grey-text">UX Designer,<br> Jan 2018 – Feb 2019,<br> Washington, DC</p>
 
 
         </div>
