--- a/es.html
+++ b/es.html
@@ -267,7 +267,7 @@
             bien, realmente bien. Para aprender mas acerca de mi visita mi &nbsp;<a
               href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank"><i
                 class="fas fa-external-link-square-alt" aria-hidden="true"></i>&nbsp;blog</a>&nbsp;o escucha mi <a
-              href="https://open.spotify.com/playlist/17WDdefco1Zz4gyQf9fiQV" target="_blank"
+              href="https://open.spotify.com/playlist/5E2u3noK6foq4td4WBlPYH?si=595b87827b9349c8" target="_blank"
               rel="noopener noreferrer"><i class="fas fa-external-link-square-alt" aria-hidden="true"></i>&nbsp;lista de
               canciones</a>&nbsp;de este año en
             Spotify.</p>
