--- a/index.html
+++ b/index.html
@@ -261,8 +261,9 @@
             products easy-to-use and while I am at it I also help them look good, real good. To learn more about me
             check out my <a href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank"><i
                 class="fas fa-external-link-square-alt" aria-hidden="true"></i>&nbsp;blog</a>&nbsp;or listen to my
-            2021&nbsp;&nbsp;<a href="https://open.spotify.com/playlist/17WDdefco1Zz4gyQf9fiQV" target="_blank"
-              rel="noopener noreferrer"><i class="fas fa-external-link-square-alt" aria-hidden="true"></i>&nbsp;Spotify
+            current&nbsp;&nbsp;<a href="https://open.spotify.com/playlist/5E2u3noK6foq4td4WBlPYH?si=595b87827b9349c8"
+              target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-square-alt"
+                aria-hidden="true"></i>&nbsp;Spotify
               playlist</a>.</p>
         </div>
 
