--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
         <!--  ================== SPACE DIV ===================== -->
 
         <div class="col-lg-8">
-          <a href="/cv/Resume_Peter Verastegui_July_(2021).pdf" target="_blank" download>
+          <a href="/cv/Resume_Peter Verastegui_February_(2022).pdf" target="_blank" download>
             <button class="site-btn" data-tilt> DOWNLOAD RESUME
               <i class="icon ion-md-arrow-down"></i>
             </button>
