New Welcome Page

--- a/Gallo-Guapo.html
+++ b/Gallo-Guapo.html
@@ -63,7 +63,7 @@
         style="position: absolute; overflow: hidden; top: 0px; left: 0px; right: 0px; bottom: 0px; transform: translateY(110%) translateZ(0px);">
         <div class="midnightInner"
           style="position: absolute; overflow: auto; top: 0px; left: 0px; right: 0px; bottom: 0px; transform: translateY(-110%) translateZ(0px);">
-          <a href="index.html" class="logo float-left"></a>
+          <a href="home.html" class="logo float-left"></a>
           <div class="menu float-right">
             <div class="nav-icon">
               <span></span>
@@ -77,7 +77,7 @@
         style="position: absolute; overflow: hidden; top: 0px; left: 0px; right: 0px; bottom: 0px; transform: translateY(0%) translateZ(0px);">
         <div class="midnightInner"
           style="position: absolute; overflow: auto; top: 0px; left: 0px; right: 0px; bottom: 0px; transform: translateY(0%) translateZ(0px);">
-          <a href="index.html" class="logo float-left"></a>
+          <a href="home.html" class="logo float-left"></a>
           <div class="menu float-right">
             <div class="nav-icon">
               <span></span>
@@ -95,22 +95,22 @@
         <div class="menu-holder">
           <ul class="navmenu">
             <li class="scroll">
-              <a href="index.html#portfolio">Portfolio</a>
+              <a href="home.html#portfolio">Portfolio</a>
             </li>
             <li class="scroll">
               <a href="https://peterverastegui.wordpress.com/">Blog</a>
             </li>
             <li class="scroll">
-              <a href="index.html#about">About</a>
+              <a href="home.html#about">About</a>
             </li>
             <li class="scroll">
-              <a href="index.html#resume">Resume</a>
+              <a href="home.html#resume">Resume</a>
             </li>
             <li class="scroll">
-              <a href="index.html#contact">Contact Information</a>
+              <a href="home.html#contact">Contact Information</a>
             </li>
             <li class="scroll">
-              <a href="es.html">Website en Español</a>
+              <a href="es.html">Español</a>
             </li>
           </ul>
         </div>
