--- a/home.html
+++ b/home.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
-  <title>Peter Verastegui | Portfalio</title>
+  <title>Peter Verastegui | Portfolio</title>
   <meta charset="UTF-8">
-  <meta name="description" content="Portafolio de Peter Verastegui">
-  <meta name="keywords" content="Portfolio, personal, diseño, UI,UX, Animacion Digital">
+  <meta name="description" content="Peter Verastegui's Portofolio">
+  <meta name="keywords" content="personal, portfolio">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:title" content="Portafolio de Peter Verastegui" />
+  <meta property="og:title" content="Peter Verastegui's Portfolio" />
   <meta property="og:image" content="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg" />
 
 
@@ -58,7 +58,7 @@
     <!-- HEADER
 ================================================== -->
     <header>
-      <a href="es.html" class="logo float-left"></a>
+      <a href="home.html" class="logo float-left"></a>
       <div class="menu float-right">
         <div class="nav-icon">
           <span></span>
@@ -74,23 +74,24 @@
         <div class="menu-holder">
           <ul class="navmenu">
             <li class="scroll">
-              <a href="#portfolio">Portafolio</a>
+              <a href="#portfolio">Portfolio</a>
             </li>
             <li class="scroll">
               <a href="https://peterverastegui.wordpress.com/">Blog</a>
             </li>
             <li class="scroll">
-              <a href="#about">Acerca de mi</a>
+              <a href="#about">About</a>
             </li>
             <li class="scroll">
-              <a href="#resume">Currículum Vitae</a>
+              <a href="#resume">Resume</a>
             </li>
             <li class="scroll">
-              <a href="#contact">Contacto</a>
+              <a href="#contact">Contact Information</a>
             </li>
             <li class="scroll">
-              <a href="home.html">Website in English</a>
+              <a href="es.html">Website en Español</a>
             </li>
+
           </ul>
         </div>
       </div>
@@ -99,7 +100,7 @@
     <!-- Up to top -->
     <div class="uptotop">
       <div class="holder">
-        <span>Ir arriba</span>
+        <span>Up to top</span>
         <div class="arrow"></div>
       </div>
     </div>
@@ -123,14 +124,14 @@
           </div>
 
           <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-USA-Today.html">
+            <a href="USA-Today.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-1/work-1-Thumb-7.png"
                 alt="USA Today Brand Refresh">
             </a>
           </div>
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-Creating-Change.html">
+            <a href="Creating-Change.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/work-8/Creating-Change-2.png"
                 alt="Creating Change">
             </a>
@@ -146,29 +147,29 @@
           </div>
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-Storytelling-Bootcamp.html">
+            <a href="Storytelling-Bootcamp.html">
               <img class="round-corners bottom_60 plus-cursor"
                 src="img/works/work-4/Storytelling-Bootcamp-thumbnail.png" alt="Woman diving photo by Dave McAloney">
             </a>
           </div>
           <!--  ================== HIDE 
-      <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-        <a href="Racing-Extinction.html">
-          <img class="round-corners bottom_60 plus-cursor" src="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg"
-            alt="">
-        </a>
-      </div>
-===================== -->
+          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+            <a href="Racing-Extinction.html">
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-3/Paradise-Flycatcher-Thumbnail.jpg"
+                alt="">
+            </a>
+          </div>
+ ===================== -->
 
 
           <!--  ================== HIDE 
-      <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-        <a href="Biodiversity-Festival.html">
-          <img class="round-corners bottom_60 plus-cursor" src="img/works/work-6/Bat-Flying-Thumbnail-Portfolio.gif"
-            alt="Bat Flying Animation">
-        </a>
-      </div>
-      ===================== -->
+          <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
+            <a href="Biodiversity-Festival.html">
+              <img class="round-corners bottom_60 plus-cursor" src="img/works/work-6/Bat-Flying-Thumbnail-Portfolio.gif"
+                alt="Bat Flying Animation">
+            </a>
+          </div>
+          ===================== -->
 
         </div>
 
@@ -176,19 +177,18 @@
 
 
           <div class="image photography wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-Galaxy.html">
+            <a href="Galaxy.html">
               <img class="round-corners bottom_60 plus-cursor"
                 src="img/works/Galaxy/1600x883-Galaxy-Thumbnail-Dark-UI-3.png" alt="Galaxy">
             </a>
           </div>
 
           <div class="image wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
-            <a href="es-toucan-template.html">
+            <a href="toucan-template.html">
               <img class="round-corners bottom_60 plus-cursor" src="img/works/toucan/Toucan-thumbnail.png"
                 alt="Library of Congress">
             </a>
           </div>
-
 
           <div class="wow fadeInUp" data-wow-delay="0.2s" data-type="ajax-load">
             <!-- Reel * Start -->
@@ -199,6 +199,10 @@
             <script src="https://player.vimeo.com/api/player.js"></script>
             <!-- Reel * End -->
           </div>
+
+
+
+
         </div>
 
 
@@ -207,20 +211,12 @@
       <div class="row lightbox-gallery">
 
 
-
-
         <div class="col-lg-4">
-
-
-
 
 
         </div>
 
         <div class="col-lg-4">
-
-
-
 
 
 
@@ -250,27 +246,25 @@
       </div>
     </div>
 
-
     <!--  ================== ABOUT SECTION ===================== -->
 
     <div id="about" class="container project-detail dark-bg padtop_90" data-midnight="dark">
       <div class="row lightbox-gallery">
 
         <div class="col-lg-4">
-          <h2 class="white-text subtitle bottom_30">Acerca de mi</h2>
+          <h2 class="white-text subtitle bottom_30">About</h2>
         </div>
 
         <div class="image col-lg-8 wow fadeInUp" data-wow-delay="0.1s">
           <img class="round-corners" src="img/Profile-Peter-2.png" alt="Portrait of Peter">
-          <p class="padtop_60 grey-text">Hola, soy Peter. Un artista que ayuda, a compañías, a crear productos y
-            servicios que son fáciles de usar, y mientras estoy en ello también las asesoro con su look para que se vean
-            bien, realmente bien. Para aprender mas acerca de mi visita mi &nbsp;<a
-              href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank"><i
-                class="fas fa-external-link-square-alt" aria-hidden="true"></i>&nbsp;blog</a>&nbsp;o escucha mi <a
-              href="https://open.spotify.com/playlist/5E2u3noK6foq4td4WBlPYH?si=595b87827b9349c8" target="_blank"
-              rel="noopener noreferrer"><i class="fas fa-external-link-square-alt" aria-hidden="true"></i>&nbsp;lista de
-              canciones</a>&nbsp;de este año en
-            Spotify.</p>
+          <p class="padtop_60 grey-text">Hello, my name is Peter. I am an artist that helps companies make their
+            products easy-to-use and while I am at it I also help them look good, real good. To learn more about me
+            check out my <a href="https://peterverastegui.wordpress.com/" rel="noopener noreferrer" target="_blank"><i
+                class="fas fa-external-link-square-alt" aria-hidden="true"></i>&nbsp;blog</a>&nbsp;or listen to my
+            current&nbsp;&nbsp;<a href="https://open.spotify.com/playlist/5E2u3noK6foq4td4WBlPYH?si=595b87827b9349c8"
+              target="_blank" rel="noopener noreferrer"><i class="fas fa-external-link-square-alt"
+                aria-hidden="true"></i>&nbsp;Spotify
+              playlist</a>.</p>
         </div>
 
       </div>
@@ -283,11 +277,11 @@
       <div class="row lightbox-gallery">
 
         <div class="col-lg-4 col-md-12 col-sm-12">
-          <h2 class="white-text subtitle">Currículum Vitae</h2>
+          <h2 class="white-text subtitle">Resume</h2>
         </div>
 
         <div class="col-lg-8 col-md-12 col-sm-12 padbot_30">
-          <h3 class="grey-text">Experiencia Laboral</h3>
+          <h3 class="grey-text">Experience</h3>
         </div>
       </div>
 
@@ -302,7 +296,7 @@
 
 
           <h3 class="white-text bottom_15">FINRA</h3>
-          <p class="padbot_30 grey-text">Diseñador UX Senior,<br> Feb 2019 – Presente,<br> Maryland, EE. UU.</p>
+          <p class="padbot_30 grey-text">Sr. UX Designer,<br> Feb 2019 – Present,<br> Rockville, MD</p>
 
 
         </div>
@@ -310,7 +304,7 @@
 
 
           <h3 class="white-text bottom_15">Subject Matter</h3>
-          <p class="padbot_30 grey-text">Diseñador UX,<br> Ene. 2018 – Feb 2019,<br> Washington, D. C., EE. UU.</p>
+          <p class="padbot_30 grey-text">UX Designer,<br> Jan 2018 – Feb 2019,<br> Washington, DC</p>
 
 
         </div>
@@ -318,7 +312,7 @@
 
 
           <h3 class="white-text bottom_15">PBS NewsHour</h3>
-          <p class="padbot_30 grey-text">Animador Digital,<br> Nov. 2017 – Ene. 2018,<br> Virginia, EE. UU.</p>
+          <p class="padbot_30 grey-text">Motion Designer,<br> Nov 2017 – Jan 2018,<br> Arlington, VA</p>
 
 
         </div>
@@ -337,7 +331,7 @@
 
 
           <h3 class="white-text bottom_15">USA Today</h3>
-          <p class="padbot_30 grey-text">Diseñador Grafico,<br> Abr. 2017 – Jul. 2017,<br> Virginia, EE. UU.</p>
+          <p class="padbot_30 grey-text">Graphic Designer,<br> Apr 2017 – Jul 2017,<br> Mclean, VA</p>
 
 
         </div>
@@ -345,16 +339,15 @@
 
 
           <h3 class="white-text bottom_15">National Geographic</h3>
-          <p class="padbot_30 grey-text">Diseñador Grafico,<br> Abr. 2016 – Abr. 2017,<br> Washington, D. C., EE. UU.
-          </p>
+          <p class="padbot_30 grey-text">Graphic Designer,<br> Apr 2016 – Apr 2017,<br> Washington, DC</p>
 
 
         </div>
         <div class="col-lg-2">
 
 
-          <h3 class="white-text bottom_15">Discovery Inc.</h3>
-          <p class="padbot_30 grey-text">Diseñador Grafico,<br> Ene. 2015 - Ene. 2016,<br> Maryland, EE. UU.</p>
+          <h3 class="white-text bottom_15">Discovery</h3>
+          <p class="padbot_30 grey-text">Graphic Designer,<br> Jan 2015 – Jan 2016,<br> Silver Spring, MD</p>
 
 
         </div>
@@ -369,7 +362,7 @@
         </div>
 
         <div class="col-lg-8 col-md-12 col-sm-12 padbot_30">
-          <h3 class="grey-text">Educación</h3>
+          <h3 class="grey-text">Education</h3>
         </div>
       </div>
 
@@ -381,49 +374,36 @@
         <!--  ================== SPACE DIV ===================== -->
 
         <div class="col-lg-8">
-
-
           <h3 class="white-text bottom_15">Corcoran College of Art + Design</h3>
-          <p class="grey-text">Bachiller de Bellas Artes, licenciatura en diseño gráfico, <br> Washington, D. C., EE.
-            UU.<br> 2010 - 2014</p>
-
-
+          <p class="grey-text">Bachelor of Fine Art & Graphic Design<br> 2010 - 2014</p>
         </div>
-
-
       </div>
-
       <div class="row lightbox-gallery top_60">
         <!--  ================== SPACE DIV ===================== -->
         <div class="col-lg-4"></div>
         <!--  ================== SPACE DIV ===================== -->
 
         <div class="col-lg-8">
-          <a href="/cv/CV_Peter Verastegui_Julio_(2021).pdf" target="popup" download>
-            <button class="site-btn" data-tilt> DESCARGAR CV
+          <a href="/cv/Resume_Peter Verastegui_February_(2022).pdf" target="_blank" download>
+            <button class="site-btn" data-tilt> DOWNLOAD RESUME
               <i class="icon ion-md-arrow-down"></i>
             </button>
           </a>
-
         </div>
-
       </div>
-
-
     </div>
-
     <!-- footer -->
     <footer id="contact" data-midnight="dark" class="dark-bg padding_90">
       <div class="container project-detail padtop_15">
         <div class="row lightbox-gallery">
           <div class="col-lg-4">
-            <h2 class="white-text subtitle bottom_30">Contacto</h2>
+            <h2 class="white-text subtitle bottom_30">Contact Information</h2>
           </div>
           <div class="col-lg-2 bottom_30">
             <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
           </div>
-          <div class="col-lg-2 bottom_30 text-sm-left text-md-left text-lg-right text-xl-center"">
-            <a href=" tel:+1571-295-1415">+1 571 295 1415</a>
+          <div class="col-lg-2 bottom_30 text-sm-left text-md-left text-lg-right text-xl-center">
+            <a href="tel:+1571-295-1415">+1 571 295 1415</a>
           </div>
           <div class="col-lg-2 bottom_30">
             <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
@@ -435,15 +415,13 @@
                 aria-hidden="true"></i> </a>
           </div>
           <div class="col-lg-2 bottom_30">
-            <p class="grey-text">
+            <p class="white-text">
               &copy;&nbsp;<span id="copyYear"></span>&nbsp;Peter Verastegui</p>
           </div>
         </div>
       </div>
       </div>
     </footer>
-
-
   </main>
 
   <!-- Javascripts -->
@@ -454,9 +432,10 @@
     var currentYear = new Date().getFullYear();
     document.getElementById("copyYear").innerHTML = currentYear;
   </script>
-
-
-
+  <script type="text/javascript">
+    var currentYear = new Date().getFullYear();
+    document.getElementById("copyYear").innerHTML = currentYear;
+  </script>
 </body>
 
 </html>
