--- a/Galaxy.html
+++ b/Galaxy.html
@@ -61,7 +61,7 @@
         style="position: absolute; overflow: hidden; inset: 0px; transform: translateY(110%) translateZ(0px);">
         <div class="midnightInner"
           style="position: absolute; overflow: auto; inset: 0px; transform: translateY(-110%) translateZ(0px);">
-          <a href="index.html" class="logo float-left"></a>
+          <a href="home.html" class="logo float-left"></a>
           <div class="menu float-right">
             <div class="nav-icon">
               <span></span>
@@ -75,7 +75,7 @@
         style="position: absolute; overflow: hidden; inset: 0px; transform: translateY(0%) translateZ(0px);">
         <div class="midnightInner"
           style="position: absolute; overflow: auto; inset: 0px; transform: translateY(0%) translateZ(0px);">
-          <a href="index.html" class="logo float-left"></a>
+          <a href="home.html" class="logo float-left"></a>
           <div class="menu float-right">
             <div class="nav-icon">
               <span></span>
@@ -89,7 +89,7 @@
         style="position: absolute; overflow: hidden; inset: 0px; transform: translateY(110%) translateZ(0px);">
         <div class="midnightInner"
           style="position: absolute; overflow: auto; inset: 0px; transform: translateY(-110%) translateZ(0px);">
-          <a href="index.html" class="logo float-left"></a>
+          <a href="home.html" class="logo float-left"></a>
           <div class="menu float-right">
             <div class="nav-icon">
               <span></span>
@@ -107,19 +107,19 @@
         <div class="menu-holder">
           <ul class="navmenu">
             <li class="scroll">
-              <a href="index.html#portfolio">Portfolio</a>
+              <a href="home.html#portfolio">Portfolio</a>
             </li>
             <li class="scroll">
               <a href="https://peterverastegui.wordpress.com/">Blog</a>
             </li>
             <li class="scroll">
-              <a href="index.html#about">About</a>
+              <a href="home.html#about">About</a>
             </li>
             <li class="scroll">
-              <a href="index.html#resume">Resume</a>
+              <a href="home.html#resume">Resume</a>
             </li>
             <li class="scroll">
-              <a href="index.html#contact">Contact Information</a>
+              <a href="home.html#contact">Contact Information</a>
             </li>
             <li class="scroll">
               <a href="es.html">Website en Español</a>
