--- a/Love-Letter.html
+++ b/Love-Letter.html
@@ -57,7 +57,7 @@
     <!-- Header
 ================================================== -->
     <header>
-      <a href="index.html" class="logo float-left"></a>
+      <a href="home.html" class="logo float-left"></a>
       <div class="menu float-right">
         <div class="nav-icon">
           <span></span>
@@ -73,16 +73,16 @@
         <div class="menu-holder">
           <ul class="navmenu">
             <li class="scroll">
-              <a href="index.html#portfolio">Portfolio</a>
+              <a href="home.html#portfolio">Portfolio</a>
             </li>
             <li class="scroll">
-              <a href="index.html#about">About</a>
+              <a href="home.html#about">About</a>
             </li>
             <li class="scroll">
-              <a href="index.html#clients">Clients</a>
+              <a href="home.html#clients">Clients</a>
             </li>
             <li class="scroll">
-              <a href="index.html#contact">Contact</a>
+              <a href="home.html#contact">Contact</a>
             </li>
           </ul>
         </div>
