--- a/Storytelling-Bootcamp.html
+++ b/Storytelling-Bootcamp.html
@@ -57,7 +57,7 @@
         <!-- Header
 ================================================== -->
         <header>
-            <a href="index.html" class="logo float-left"></a>
+            <a href="home.html" class="logo float-left"></a>
             <div class="menu float-right">
                 <div class="nav-icon">
                     <span></span>
@@ -73,19 +73,19 @@
                 <div class="menu-holder">
                     <ul class="navmenu">
                         <li class="scroll">
-                            <a href="index.html#portfolio">Portfolio</a>
+                            <a href="home.html#portfolio">Portfolio</a>
                         </li>
                         <li class="scroll">
                             <a href="https://peterverastegui.wordpress.com/">Blog</a>
                         </li>
                         <li class="scroll">
-                            <a href="index.html#about">About</a>
+                            <a href="home.html#about">About</a>
                         </li>
                         <li class="scroll">
-                            <a href="index.html#resume">Resume</a>
+                            <a href="home.html#resume">Resume</a>
                         </li>
                         <li class="scroll">
-                            <a href="index.html#contact">Contact Information</a>
+                            <a href="home.html#contact">Contact Information</a>
                         </li>
                         <li class="scroll">
                             <a href="es.html">Website en Español</a>
