--- a/USA-Today.html
+++ b/USA-Today.html
@@ -55,7 +55,7 @@
     <!-- Header
 ================================================== -->
     <header>
-      <a href="index.html" class="logo float-left"></a>
+      <a href="home.html" class="logo float-left"></a>
       <div class="menu float-right">
         <div class="nav-icon">
           <span></span>
@@ -71,19 +71,19 @@
         <div class="menu-holder">
           <ul class="navmenu">
             <li class="scroll">
-              <a href="index.html#portfolio">Portfolio</a>
+              <a href="home.html#portfolio">Portfolio</a>
             </li>
             <li class="scroll">
               <a href="https://peterverastegui.wordpress.com/">Blog</a>
             </li>
             <li class="scroll">
-              <a href="index.html#about">About</a>
+              <a href="home.html#about">About</a>
             </li>
             <li class="scroll">
-              <a href="index.html#clients">Clients</a>
+              <a href="home.html#clients">Clients</a>
             </li>
             <li class="scroll">
-              <a href="index.html#contact">Contact Information</a>
+              <a href="home.html#contact">Contact Information</a>
             </li>
             <li class="scroll">
               <a href="es.html">Website en Español</a>
