--- a/es-UI-UX-Illustrations.html
+++ b/es-UI-UX-Illustrations.html
@@ -89,7 +89,7 @@
                             <a href="#contact">Contacto</a>
                         </li>
                         <li class="scroll">
-                            <a href="index.html">Website in English</a>
+                            <a href="home.html">Website in English</a>
                         </li>
                     </ul>
                 </div>
