New Job Experience on CV

--- a/es.html
+++ b/es.html
@@ -292,7 +292,7 @@
       </div>
 
 
-      <div class="row lightbox-gallery">
+      <div class="row lightbox-gallery d-flex">
 
         <!--  ================== SPACE DIV ===================== -->
         <div class="col-lg-4"></div>
@@ -301,8 +301,17 @@
         <div class="col-lg-2">
 
 
+          <h3 class="white-text bottom_15">Giro54</h3>
+          <p class="padbot_30 grey-text">UX Lead,<br> May. 2022 - Presente,<br> Santa Cruz, Bolivia.</p>
+
+
+        </div>
+
+        <div class="col-lg-2">
+
+
           <h3 class="white-text bottom_15">FINRA</h3>
-          <p class="padbot_30 grey-text">Diseñador UX Senior,<br> Feb 2019 – Presente,<br> Maryland, EE. UU.</p>
+          <p class="padbot_30 grey-text">Diseñador UX Senior,<br> Feb. 2019 – Abr. 2022,<br> Maryland, EE. UU.</p>
 
 
         </div>
@@ -310,20 +319,10 @@
 
 
           <h3 class="white-text bottom_15">Subject Matter</h3>
-          <p class="padbot_30 grey-text">Diseñador UX,<br> Ene. 2018 – Feb 2019,<br> Washington, D. C., EE. UU.</p>
+          <p class="padbot_30 grey-text">Diseñador UX,<br> Ene. 2018 – Feb. 2019,<br> Washington, D. C., EE. UU.</p>
 
 
         </div>
-        <div class="col-lg-2">
-
-
-          <h3 class="white-text bottom_15">PBS NewsHour</h3>
-          <p class="padbot_30 grey-text">Animador Digital,<br> Nov. 2017 – Ene. 2018,<br> Virginia, EE. UU.</p>
-
-
-        </div>
-
-
       </div>
 
 
@@ -332,6 +331,15 @@
         <!--  ================== SPACE DIV ===================== -->
         <div class="col-lg-4"></div>
         <!--  ================== SPACE DIV ===================== -->
+
+        <div class="col-lg-2">
+
+
+          <h3 class="white-text bottom_15">PBS NewsHour</h3>
+          <p class="padbot_30 grey-text">Animador Digital,<br> Nov. 2017 – Ene. 2018,<br> Virginia, EE. UU.</p>
+
+
+        </div>
 
         <div class="col-lg-2">
 
@@ -350,14 +358,7 @@
 
 
         </div>
-        <div class="col-lg-2">
 
-
-          <h3 class="white-text bottom_15">Discovery Inc.</h3>
-          <p class="padbot_30 grey-text">Diseñador Grafico,<br> Ene. 2015 - Ene. 2016,<br> Maryland, EE. UU.</p>
-
-
-        </div>
 
 
       </div>
@@ -399,7 +400,7 @@
         <!--  ================== SPACE DIV ===================== -->
 
         <div class="col-lg-8">
-          <a href="/cv/CV_Peter Verastegui_Julio_(2021).pdf" target="popup" download>
+          <a href="/cv/CV_Peter Verastegui_Agosto_(2022).pdf" target="popup" download>
             <button class="site-btn" data-tilt> DESCARGAR CV
               <i class="icon ion-md-arrow-down"></i>
             </button>
