--- a/home.html
+++ b/home.html
@@ -295,8 +295,17 @@
         <div class="col-lg-2">
 
 
+          <h3 class="white-text bottom_15">Giro54</h3>
+          <p class="padbot_30 grey-text">UX Lead,<br> May 2022 – Present,<br> Santa Cruz, Bolivia</p>
+
+
+        </div>
+
+        <div class="col-lg-2">
+
+
           <h3 class="white-text bottom_15">FINRA</h3>
-          <p class="padbot_30 grey-text">Sr. UX Designer,<br> Feb 2019 – Present,<br> Rockville, MD</p>
+          <p class="padbot_30 grey-text">Sr. Interaction Designer,<br> Feb 2019 – Apr 2022,<br> Rockville, MD, U.S.</p>
 
 
         </div>
@@ -304,20 +313,10 @@
 
 
           <h3 class="white-text bottom_15">Subject Matter</h3>
-          <p class="padbot_30 grey-text">UX Designer,<br> Jan 2018 – Feb 2019,<br> Washington, DC</p>
+          <p class="padbot_30 grey-text">Interaction Designer,<br> Jan 2018 – Feb 2019,<br> Washington, DC, U.S.</p>
 
 
         </div>
-        <div class="col-lg-2">
-
-
-          <h3 class="white-text bottom_15">PBS NewsHour</h3>
-          <p class="padbot_30 grey-text">Motion Designer,<br> Nov 2017 – Jan 2018,<br> Arlington, VA</p>
-
-
-        </div>
-
-
       </div>
 
 
@@ -330,8 +329,17 @@
         <div class="col-lg-2">
 
 
+          <h3 class="white-text bottom_15">PBS NewsHour</h3>
+          <p class="padbot_30 grey-text">Motion Designer,<br> Nov 2017 – Jan 2018,<br> Arlington, VA, U.S.</p>
+
+
+        </div>
+
+        <div class="col-lg-2">
+
+
           <h3 class="white-text bottom_15">USA Today</h3>
-          <p class="padbot_30 grey-text">Graphic Designer,<br> Apr 2017 – Jul 2017,<br> Mclean, VA</p>
+          <p class="padbot_30 grey-text">Graphic Designer,<br> Apr 2017 – Jul 2017,<br> Mclean, VA, U.S.</p>
 
 
         </div>
@@ -339,19 +347,10 @@
 
 
           <h3 class="white-text bottom_15">National Geographic</h3>
-          <p class="padbot_30 grey-text">Graphic Designer,<br> Apr 2016 – Apr 2017,<br> Washington, DC</p>
+          <p class="padbot_30 grey-text">Graphic Designer,<br> Apr 2016 – Apr 2017,<br> Washington, DC, U.S.</p>
 
 
         </div>
-        <div class="col-lg-2">
-
-
-          <h3 class="white-text bottom_15">Discovery</h3>
-          <p class="padbot_30 grey-text">Graphic Designer,<br> Jan 2015 – Jan 2016,<br> Silver Spring, MD</p>
-
-
-        </div>
-
 
       </div>
 
