--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 "es": {
                     "strings": {
                         "btn-ux": "DISEÑO UX",
-                        "btn-photo": "FOTOGRAFIA",
+                        "btn-photo": "FOTOGRAFÍA",
                         "btn-writing": "ESCRITURA"
                     }
                 },
