--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
             "languages": {
                 "en": {
                     "strings": {
-                        "btn-ux": "INTERACTION DESIGN",
+                        "btn-ux": "DESIGN",
                         "btn-photo": "PHOTOGRAPHY",
                         "btn-writing": "WRITING"
                     }
                 },
                 "es": {
                     "strings": {
-                        "btn-ux": "DISEÑO UX",
+                        "btn-ux": "DISEÑO",
                         "btn-photo": "FOTOGRAFÍA",
                         "btn-writing": "ESCRITURA"
                     }
