--- a/home.html
+++ b/home.html
@@ -77,19 +77,16 @@
               <a href="#portfolio">Portfolio</a>
             </li>
             <li class="scroll">
-              <a href="https://peterverastegui.wordpress.com/">Blog</a>
-            </li>
-            <li class="scroll">
               <a href="#about">About</a>
             </li>
             <li class="scroll">
               <a href="#resume">Resume</a>
             </li>
             <li class="scroll">
-              <a href="#contact">Contact Information</a>
+              <a href="#contact">Contact</a>
             </li>
             <li class="scroll">
-              <a href="es.html">Website en Español</a>
+              <a href="es.html">Español</a>
             </li>
 
           </ul>
@@ -396,7 +393,7 @@
       <div class="container project-detail padtop_15">
         <div class="row lightbox-gallery">
           <div class="col-lg-4">
-            <h2 class="white-text subtitle bottom_30">Contact Information</h2>
+            <h2 class="white-text subtitle bottom_30">Contact</h2>
           </div>
           <div class="col-lg-2 bottom_30">
             <a href="mailto:verastegui.peter@gmail.com?Subject=Hello" target="_blank">verastegui.peter@gmail.com</a>
@@ -407,8 +404,6 @@
           <div class="col-lg-2 bottom_30">
             <a href="https://www.linkedin.com/in/peterveras/"><i class="fab fa-linkedin" aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.behance.net/peterveras"><i class="fab fa-behance"
-                aria-hidden="true"></i> </a>
-            &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.pinterest.com/peterveras/"><i class="fab fa-pinterest"
                 aria-hidden="true"></i> </a>
             &nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.instagram.com/peter_verastegui/"><i class="fab fa-instagram"
                 aria-hidden="true"></i> </a>
@@ -427,10 +422,6 @@
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
-  <script type="text/javascript">
-    var currentYear = new Date().getFullYear();
-    document.getElementById("copyYear").innerHTML = currentYear;
-  </script>
   <script type="text/javascript">
     var currentYear = new Date().getFullYear();
     document.getElementById("copyYear").innerHTML = currentYear;
