--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             "languages": {
                 "en": {
                     "strings": {
-                        "btn-ux": "DESIGN",
+                        "btn-ux": "DESIGN [IxD]",
                         "btn-photo": "PHOTOGRAPHY",
                         "btn-writing": "WRITING"
                     }
