--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
 ================================================== -->
 
         <div class="container">
-            <h2 class="white-text text-center subtitle top_90">E. PETER VERASTEGUI G.</h2>
-
+            <div class="col-lg-4 offset-lg-4 col-sm-4 offset-sm-4 image top_90 bottom_30">
+                <img src="img/logo-green.svg" alt="Logo">
+            </div>
             <div lang="en" class="text-center load-more top_60 wow fadeInUp" data-wow-delay="0.2s">
                 <a href="home.html">
                     <button data-key="btn-ux" class="site-btn" data-tilt>Actual
